crates/solidity-v2/testing/snapshots/diagnostics_output/resolution/expected_function_in_using_directive/builtin_keccak256/generated/solc/0.8.13-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

[TypeError 8187] Error: Expected function name.
   ╭─[input.sol:4:8]
   │
 4 │ using {keccak256} for bytes;
   │        ────┬────  
   │            ╰────── Error occurred here.
───╯
